tests/integration/tests/check_commands/CHECK-NOT/one_string/negative/02-negative_match_whitespaces/sample.itest
; RUN: %cat "%S/filecheck.input" | (%FILECHECK_EXEC "%S/filecheck.check" 2>&1; test $? == 1;) | %FILECHECK_TESTER_EXEC "%s" --strict-whitespace --match-full-lines

; CHECK:{{^.*}}filecheck.check:1:14: error: CHECK-NOT: excluded string found in input{{$}}
; CHECK-NEXT:{{^; CHECK-NOT: hello world$}}
; CHECK-NEXT:{{^             \^$}}
; CHECK-NEXT:<stdin>:1:1: note: found here
; CHECK-NEXT:{{^hello world$}}
; CHECK-NEXT:{{^\^~+$}}
; CHECK-EMPTY:
